@@ -13,6 +13,7 @@ Cacti CHANGELOG
 -feature: add links to Graph Management and Data Sources to Device Edit Screen
 -feature: add links to Graph Template and Host Edit to Graph Edit Screen
 -feature: add links to Data Template and Host Edit to Data Source Edit Screen
+-feature: support using the cacti database api with more than one connection
 
 0.8.7b
 -bug#0000855: Unnecessary (and faulty) DEF generation for CF:AVERAGE
